# asylum-item-nft

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
asylum-traits/: Cargo.toml
asylum-traits/src/: game.rs  interpretation.rs  item.rs  lib.rs  proposal.rs  resource.rs  template.rs  types.rs
docs/: example.md  items-metadata-standard.md  testing-guide.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/asylum-core/: Cargo.toml  INTERFACE.md  README.md
pallets/asylum-core/src/: functions.rs  implementation.rs  lib.rs  mock.rs  tests.rs
pallets/asylum-game-distribution/: Cargo.toml  README.md
pallets/asylum-game-distribution/src/: functions.rs  impl_nonfungibles.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/games-management/: Cargo.toml
pallets/games-management/src/: implementation.rs  lib.rs  mock.rs  tests.rs
pallets/item-nft/: Cargo.toml
pallets/item-nft/src/: implementation.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
