[package]
name = "asylum-game-distribution"
version = "0.0.1"
description = 'Asylum game distribution system'
authors = ['horacio.lex@supercolony.net & Asylum <https://asylum.space/>']
homepage = 'https://asylum.space/'
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '4.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '5.0.0'

[dev-dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '4.0.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '5.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '5.0.0'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.17"
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
    'pallet-balances/std',
]
try-runtime = ["frame-support/try-runtime"]
