[package]
name = "games-management"
version = "0.0.1"
description = 'Asylum games management'
authors = ['Supercolony <https://supercolony.net/> & Asylum <https://asylum.space/>']
homepage = 'https://asylum.space/'
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.asylum-traits]
default-features = false
path = '../../asylum-traits'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.pallet-assets]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
]
try-runtime = ['frame-support/try-runtime']
